# remote-chat-agent-using-a2a-protocol

./: .env-example  README.md  a2a_client.py  client_agent.py  main.py  pyproject.toml
src/a2a/: a2a_server.py  a2a_tool_client.py  agent_executor_service.py
src/agent/: chat_agent.py
src/auth/: oauth2_middleware.py
src/tool/: tools.py
