[project]
name = "remote-chat-agent-using-a2a-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk @ git+https://github.com/google/a2a-python.git@main",
    "ddgs>=9.4.3",
    "google-adk>=1.8.0",
    "google-genai>=1.27.0",
    "litellm>=1.74.9.post1",
]
